force-app/main/default/objects/Lead/fields/DNA__c.field-meta.xml
<CustomField>
    <fullName>DNA__c</fullName>
    <formula>if(Payment_details__c=0,14,TODAY()-Payment_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>