force-app/main/default/objects/Lead/fields/Email_To_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Redirect__c</fullName>
    <formula>HYPERLINK(&quot;https://relevel.lightning.force.com/lightning/r/Lead/&quot;+Id+&quot;/view&quot;,  Email , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>