force-app/main/default/objects/Lead/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Occupation_Profession__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Salaried</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>