force-app/main/default/objects/Lead/fields/Expiring_Lead__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Lead__c</fullName>
    <formula>IF(Today() -  Last_Activity_Date__c  &gt;= 3, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring Lead</label>
    <type>Checkbox</type>
</CustomField>