force-app/main/default/objects/Lead/fields/Feedback_Comments__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Comments__c</fullName>
    <label>Feedback Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>