force-app/main/default/objects/Lead/fields/Finance_Sale__c.field-meta.xml
<CustomField>
    <fullName>Finance_Sale__c</fullName>
    <label>Finance Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>