force-app/main/default/objects/Lead/fields/First_Called_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Called_Date_Time__c</fullName>
    <label>First Called Date Time</label>
    <type>DateTime</type>
</CustomField>