force-app/main/default/objects/Lead/fields/First_Called_Date_Time_RM__c.field-meta.xml
<CustomField>
    <fullName>First_Called_Date_Time_RM__c</fullName>
    <label>First Called Date Time (RM)</label>
    <type>DateTime</type>
</CustomField>