force-app/main/default/objects/Lead/fields/First_Called_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Called_Time__c</fullName>
    <formula>LEFT(RIGHT(text( First_Called_Date_Time__c + 330/1440),9),8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Called Time</label>
    <type>Text</type>
</CustomField>