force-app/main/default/objects/Lead/fields/First_Connected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Connected_Date_Time__c</fullName>
    <label>First Connected Date Time</label>
    <type>DateTime</type>
</CustomField>