force-app/main/default/objects/Lead/fields/First_Connected_Date_Time_RM__c.field-meta.xml
<CustomField>
    <fullName>First_Connected_Date_Time_RM__c</fullName>
    <label>First Connected Date Time (RM)</label>
    <type>DateTime</type>
</CustomField>