force-app/main/default/objects/Lead/fields/First_contact_date_time__c.field-meta.xml
<CustomField>
    <fullName>First_contact_date_time__c</fullName>
    <description>Lead status first changed to working</description>
    <label>First contact date/time</label>
    <type>DateTime</type>
</CustomField>