force-app/main/default/objects/Lead/fields/First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FRT Based on Created-Called Date/Time</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>