force-app/main/default/objects/Lead/fields/Follow_Up_Counter__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Follow Up Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>