force-app/main/default/objects/Lead/fields/Followup_Threshold_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Followup_Threshold_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followup Threshold Overdue</label>
    <type>Checkbox</type>
</CustomField>