force-app/main/default/objects/Lead/fields/Franchisee_Name__c.field-meta.xml
<CustomField>
    <fullName>Franchisee_Name__c</fullName>
    <label>Franchisee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>