force-app/main/default/objects/Lead/fields/FRT_Based_on_Assigned_Date_Called__c.field-meta.xml
<CustomField>
    <fullName>FRT_Based_on_Assigned_Date_Called__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FRT Based on Assigned-Called Date/Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>