force-app/main/default/objects/Lead/fields/FRT_Based_on_Assigned_Date_Connected__c.field-meta.xml
<CustomField>
    <fullName>FRT_Based_on_Assigned_Date_Connected__c</fullName>
    <label>FRT Based on Assigned-Connected Date/Tim</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>