force-app/main/default/objects/Lead/fields/FRT_Based_on_Created_Date_Called__c.field-meta.xml
<CustomField>
    <fullName>FRT_Based_on_Created_Date_Called__c</fullName>
    <label>FRT Based on Created Date Called</label>
    <type>Time</type>
</CustomField>