force-app/main/default/objects/Lead/fields/FRT_Based_on_Created_Date_Connected__c.field-meta.xml
<CustomField>
    <fullName>FRT_Based_on_Created_Date_Connected__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FRT Based on Created-Connected Date/Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>