force-app/main/default/objects/Lead/fields/FRT_Based_on_RM_Connected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FRT_Based_on_RM_Connected_Date_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FRT Based on RM-Connected Date/Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>