force-app/main/default/objects/Lead/fields/FRT_Connected_Updated__c.field-meta.xml
<CustomField>
    <fullName>FRT_Connected_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FRT Connected Updated</label>
    <type>Checkbox</type>
</CustomField>