force-app/main/default/objects/Lead/fields/Goal_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Goal_Interested_In__c</fullName>
    <label>Course Interested In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business-Development</fullName>
            </value>
            <value>
                <fullName>Frontend-Development</fullName>
            </value>
            <value>
                <fullName>Backend-Development</fullName>
            </value>
            <value>
                <fullName>Full-Stack-Development</fullName>
            </value>
            <value>
                <fullName>Data-Analytics</fullName>
            </value>
            <value>
                <fullName>Associate-Product-Management</fullName>
            </value>
            <value>
                <fullName>Business-Analytics</fullName>
            </value>
            <value>
                <fullName>HR-Generalist</fullName>
            </value>
            <value>
                <fullName>Digital-Marketing</fullName>
            </value>
            <value>
                <fullName>Software-Testing</fullName>
            </value>
            <value>
                <fullName>operations-associate</fullName>
                <label>Operations-Associate</label>
            </value>
            <value>
                <fullName>Graphic-Designer</fullName>
            </value>
            <value>
                <fullName>Mechanical-Engineering</fullName>
            </value>
            <value>
                <fullName>Business-Development-Hindi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>