force-app/main/default/objects/Lead/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>IF( ISPICKVAL(Goal_Interested_In__c  , &apos;Business-Development&apos;),&apos;Non-Technical&apos;,&apos;Technical&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group</label>
    <type>Text</type>
</CustomField>