force-app/main/default/objects/Lead/fields/Highest_degree__c.field-meta.xml
<CustomField>
    <fullName>Highest_degree__c</fullName>
    <label>Highest degree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bachelors</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Class 12th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>