force-app/main/default/objects/Lead/fields/Highest_degree_V__c.field-meta.xml
<CustomField>
    <fullName>Highest_degree_V__c</fullName>
    <label>Highest degree (V)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Occupation_Profession__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachelors</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Class 12th</fullName>
            </value>
            <value>
                <fullName>BA/BBA/BCom</fullName>
                <isActive>false</isActive>
                <label>BA/BBA/BCom</label>
            </value>
            <value>
                <fullName>BCA</fullName>
                <isActive>false</isActive>
                <label>BCA</label>
            </value>
            <value>
                <fullName>BE/BTech/BS</fullName>
                <isActive>false</isActive>
                <label>BE/BTech/BS</label>
            </value>
            <value>
                <fullName>Class 12th or below</fullName>
                <isActive>false</isActive>
                <label>Class 12th or below</label>
            </value>
            <value>
                <fullName>MBA</fullName>
                <isActive>false</isActive>
                <label>MBA</label>
            </value>
            <value>
                <fullName>MCA</fullName>
                <isActive>false</isActive>
                <label>MCA</label>
            </value>
            <value>
                <fullName>ME/Mtech/MS</fullName>
                <isActive>false</isActive>
                <label>ME/Mtech/MS</label>
            </value>
            <value>
                <fullName>Other Bachelors degree</fullName>
                <isActive>false</isActive>
                <label>Other Bachelors degree</label>
            </value>
            <value>
                <fullName>Other Masters degree</fullName>
                <isActive>false</isActive>
                <label>Other Masters degree</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>