force-app/main/default/objects/Lead/fields/Inbound_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Call_Status__c</fullName>
    <label>Inbound Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>No-Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>