force-app/main/default/objects/Lead/fields/Include__c.field-meta.xml
<CustomField>
    <fullName>Include__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include in marketing campaign</inlineHelpText>
    <label>Include</label>
    <type>Checkbox</type>
</CustomField>