force-app/main/default/objects/Lead/fields/Intent_Slug__c.field-meta.xml
<CustomField>
    <fullName>Intent_Slug__c</fullName>
    <label>Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>