force-app/main/default/objects/Lead/fields/Interested_Product__c.field-meta.xml
<CustomField>
    <fullName>Interested_Product__c</fullName>
    <description>Interested Product</description>
    <label>Interested Product</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>