force-app/main/default/objects/Lead/fields/Interview_attendance_Notes_AO__c.field-meta.xml
<CustomField>
    <fullName>Interview_attendance_Notes_AO__c</fullName>
    <label>Interview attendance Notes (AO)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>