force-app/main/default/objects/Lead/fields/Interview_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Interview_Conducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Conducted</label>
    <type>Checkbox</type>
</CustomField>