force-app/main/default/objects/Lead/fields/Interview_Conducted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_Conducted_Date_Time__c</fullName>
    <label>Interview Conducted Date/Time</label>
    <type>DateTime</type>
</CustomField>