force-app/main/default/objects/Lead/fields/Interview_Date_AC__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_AC__c</fullName>
    <formula>DATEVALUE(Interview_Date_Time_AC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Date (AC)</label>
    <type>Date</type>
</CustomField>