force-app/main/default/objects/Lead/fields/Interview_Date_Time_AC__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_Time_AC__c</fullName>
    <label>Interview Date/Time (AC)</label>
    <type>DateTime</type>
</CustomField>