force-app/main/default/objects/Lead/fields/Interview_Day__c.field-meta.xml
<CustomField>
    <fullName>Interview_Day__c</fullName>
    <formula>IF( DATEVALUE(Interview_Date_Time_AC__c  ) =  TODAY()   , &apos;Today&apos;, IF( DAY(DATEVALUE(Interview_Date_Time_AC__c  )) =  (DAY(Today())+1) ,&apos;Tomorrow&apos;,IF(DAY(DATEVALUE(Interview_Date_Time_AC__c  )) &gt;  (DAY(Today())+1),&apos;Greater than 2 Days&apos;, IF( DAY(DATEVALUE(Interview_Date_Time_AC__c  )) =  (DAY(Today())-1) ,&apos;Yesterday&apos;,IF( DAY(DATEVALUE(Interview_Date_Time_AC__c  )) =  (DAY(Today())-2) ,&apos;Yesterday-1&apos;,&apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Day</label>
    <type>Text</type>
</CustomField>