force-app/main/default/objects/Lead/fields/Interview_Feedback_Notes_AO__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback_Notes_AO__c</fullName>
    <label>Interview Feedback Notes (AO)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>