force-app/main/default/objects/Lead/fields/Interview_Id__c.field-meta.xml
<CustomField>
    <fullName>Interview_Id__c</fullName>
    <label>Interview Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>