force-app/main/default/objects/Lead/fields/Interview_Reminder_Call_AC__c.field-meta.xml
<CustomField>
    <fullName>Interview_Reminder_Call_AC__c</fullName>
    <label>Interview Reminder Call (AC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Call Received</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Call Not-Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>