force-app/main/default/objects/Lead/fields/Interview_Reminder_Call_AC_No__c.field-meta.xml
<CustomField>
    <fullName>Interview_Reminder_Call_AC_No__c</fullName>
    <label>Interview Reminder Call Sub-Status (AC)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interview_Reminder_Call_AC__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Dropped the call</fullName>
            </value>
            <value>
                <fullName>Not Relevant</fullName>
            </value>
            <value>
                <fullName>Awareness - Has no clue about Course/Company</fullName>
            </value>
            <value>
                <fullName>Communication - Can not Understand English</fullName>
            </value>
            <value>
                <fullName>Intent</fullName>
            </value>
            <value>
                <fullName>Logistics - Laptop/Internet Issue</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Persona Mismatch</fullName>
            </value>
            <value>
                <fullName>Might be Interested for future cohorts</fullName>
            </value>
            <value>
                <fullName>Follow up for confirmation on time &amp; day slot</fullName>
            </value>
            <value>
                <fullName>Requested Call Back</fullName>
            </value>
            <value>
                <fullName>Logistics Issue - Need time for arrangement</fullName>
            </value>
            <value>
                <fullName>Agreed to Join</fullName>
            </value>
            <value>
                <fullName>Denied to Join</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
            <value>
                <fullName>Did not pick</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>