force-app/main/default/objects/Lead/fields/Interview_Request_Generated__c.field-meta.xml
<CustomField>
    <fullName>Interview_Request_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Request Generated</label>
    <type>Checkbox</type>
</CustomField>