force-app/main/default/objects/Lead/fields/Interview_Rescheduled_AC__c.field-meta.xml
<CustomField>
    <fullName>Interview_Rescheduled_AC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Rescheduled  (AC)</label>
    <type>Checkbox</type>
</CustomField>