force-app/main/default/objects/Lead/fields/Interview_Rescheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_Rescheduled_Date_Time__c</fullName>
    <label>Interview Rescheduled Date/Time</label>
    <type>DateTime</type>
</CustomField>