force-app/main/default/objects/Lead/fields/Interview_Schedule_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Interview_Schedule_Confirmed__c</fullName>
    <label>Interview Schedule Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>