force-app/main/default/objects/Lead/fields/Interview_Schedule_Notes_AC__c.field-meta.xml
<CustomField>
    <fullName>Interview_Schedule_Notes_AC__c</fullName>
    <description>Google Meting Link</description>
    <label>Interview Schedule Notes (AC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>