force-app/main/default/objects/Lead/fields/Interview_Scheduled_AC__c.field-meta.xml
<CustomField>
    <fullName>Interview_Scheduled_AC__c</fullName>
    <label>Interview Scheduled (AC)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
                <isActive>false</isActive>
                <label>Not Interested</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>