force-app/main/default/objects/Lead/fields/Interview_Scheduled_Sub_Status_AC__c.field-meta.xml
<CustomField>
    <fullName>Interview_Scheduled_Sub_Status_AC__c</fullName>
    <label>Interview Scheduled Sub-Status  (AC)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Responding</fullName>
            </value>
            <value>
                <fullName>Logistics - Laptop/Internet Issue</fullName>
            </value>
            <value>
                <fullName>Call not Received</fullName>
            </value>
            <value>
                <fullName>Call Received</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
            <value>
                <fullName>Learner Disconnected</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Dropped the call</fullName>
            </value>
            <value>
                <fullName>Not Relevant</fullName>
            </value>
            <value>
                <fullName>Awareness - Has no clue about Course/Company</fullName>
            </value>
            <value>
                <fullName>Communication - Can not Understand English</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Persona Mismatch</fullName>
            </value>
            <value>
                <fullName>Might be Interested for future cohorts</fullName>
            </value>
            <value>
                <fullName>Follow up for confirmation on time &amp; day slot</fullName>
            </value>
            <value>
                <fullName>Requested Call Back</fullName>
            </value>
            <value>
                <fullName>Logistics Issue - Need time for arrangement</fullName>
            </value>
            <value>
                <fullName>Intent</fullName>
                <isActive>false</isActive>
                <label>Intent</label>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
                <isActive>false</isActive>
                <label>Not Reachable</label>
            </value>
            <value>
                <fullName>SF Issue/Call Not Going Through</fullName>
                <isActive>false</isActive>
                <label>SF Issue/Call Not Going Through</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>