force-app/main/default/objects/Lead/fields/Interview_Scheduled_Super_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Interview_Scheduled_Super_Sub_Status__c</fullName>
    <label>Interview Scheduled Super-Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interview_Scheduled_Sub_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awareness - Has no clue about Course/Company</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Financial Issue</fullName>
            </value>
            <value>
                <fullName>Might be Interested for future cohorts</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
            <value>
                <fullName>Did not pick</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Follow up for confirmation on time &amp; day slot</fullName>
            </value>
            <value>
                <fullName>Requested Call Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>