force-app/main/default/objects/Lead/fields/Interview_slot__c.field-meta.xml
<CustomField>
    <fullName>Interview_slot__c</fullName>
    <label>Interview slot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>