force-app/main/default/objects/Lead/fields/Interview_Slot_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_Slot_Date_Time__c</fullName>
    <label>Interview Slot Date/Time</label>
    <type>DateTime</type>
</CustomField>