force-app/main/default/objects/Lead/fields/Interview_Status_AO__c.field-meta.xml
<CustomField>
    <fullName>Interview_Status_AO__c</fullName>
    <label>Interview Status (AO)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Conducted</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>No Conducted</fullName>
                <label>Not Conducted</label>
            </value>
            <value>
                <fullName>AO No Show</fullName>
                <isActive>false</isActive>
                <label>AO No Show</label>
            </value>
            <value>
                <fullName>No Show</fullName>
                <isActive>false</isActive>
                <label>No Show</label>
            </value>
            <value>
                <fullName>Partial Conducted</fullName>
                <isActive>false</isActive>
                <label>Partial Conducted</label>
            </value>
            <value>
                <fullName>Refer notes</fullName>
                <isActive>false</isActive>
                <label>Refer notes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>