force-app/main/default/objects/Lead/fields/Interview_Sub_Status_AO__c.field-meta.xml
<CustomField>
    <fullName>Interview_Sub_Status_AO__c</fullName>
    <label>Interview Sub-Status (AO)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interview_Status_AO__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Learner - No Show</fullName>
            </value>
            <value>
                <fullName>AO - No Show</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Wrong Schedule Conducted by AC</fullName>
            </value>
            <value>
                <fullName>Scheduled outside working hours</fullName>
            </value>
            <value>
                <fullName>Logistics - Laptop/Internet Issue</fullName>
            </value>
            <value>
                <fullName>Learner not prepared/not ready</fullName>
            </value>
            <value>
                <fullName>Incorrect/False Schedule</fullName>
            </value>
            <value>
                <fullName>Expectation Mismatch (4Ps)</fullName>
            </value>
            <value>
                <fullName>Not Interested/ Mind Changed</fullName>
            </value>
            <value>
                <fullName>System Challenges</fullName>
            </value>
            <value>
                <fullName>Under Prepared</fullName>
            </value>
            <value>
                <fullName>Rescheduled by Learner</fullName>
            </value>
            <value>
                <fullName>AO Requested for reschedule</fullName>
            </value>
            <value>
                <fullName>Learner was not prepared</fullName>
            </value>
            <value>
                <fullName>Erroneous Schedule</fullName>
            </value>
            <value>
                <fullName>Time slot miss Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>